--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-﻿@font-face {
-  font-family: 'overpassregular';
-  src: url('fonts/Overpass_Regular-webfont.eot');
-  src: url('fonts/Overpass_Regular-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/Overpass_Regular-webfont.woff') format('woff'), url('fonts/Overpass_Regular-webfont.ttf') format('truetype'), url('fonts/Overpass_Regular-webfont.svg#overpassregular') format('svg');
-  font-weight: normal;
-  font-style: normal; }
+﻿/*@font-face {
+    font-family: 'overpassregular';
+    src: url('fonts/Overpass_Regular-webfont.eot');
+    src: url('fonts/Overpass_Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/Overpass_Regular-webfont.woff') format('woff'),
+         url('fonts/Overpass_Regular-webfont.ttf') format('truetype'),
+         url('fonts/Overpass_Regular-webfont.svg#overpassregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}*/
 body {
-  background-color: #F4F4F4;
-  background-color: #353C42;
-  color: #353c42;
+  background-color: #1C1C1C;
   color: #eee;
   font-size: 1.5rem;
-  font-family: 'overpassregular', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+  font-family: 'Open Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
 .fun {
   color: #E09721;
@@ -22,8 +24,8 @@ a, a:hover {
   color: #fff; }
 
 .glance-box {
-  background-color: #40484f;
-  border: 1px solid #757575;
+  background-color: #262626;
+  border: 1px solid #333;
   border-radius: 10px;
   margin: 1rem 1rem 0.5rem;
   padding: 10px 0px;
@@ -34,7 +36,7 @@ a, a:hover {
     color: #E09721; }
   .glance-box li {
     margin-top: 0.7rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 1.8;
     padding-left: 2.1rem;
     padding-right: 1rem; }
@@ -61,20 +63,43 @@ address {
 header {
   margin-bottom: 4rem; }
 
-h1 {
-  font-size: 8rem;
+.navbar-bubeat {
+  background-color: #913F61; }
+  .navbar-bubeat .navbar-header {
+    font-weight: 400;
+    text-align: center; }
+    .navbar-bubeat .navbar-header .navbar-toggle {
+      float: none;
+      background-color: #913F61;
+      margin: 0; }
+  .navbar-bubeat .mobile-title {
+    font-size: 1.75rem;
+    margin-top: 0;
+    padding-left: 2rem;
+    font-weight: bold;
+    text-align: left; }
+    .navbar-bubeat .mobile-title span {
+      font-size: 0.95rem;
+      color: white;
+      font-weight: normal; }
+
+.nav > li > a:focus, .nav > li > a:hover {
+  text-decoration: underline;
+  background-color: #913F61; }
+
+.title {
   font-size: 2rem;
   margin-top: 0;
   padding-left: 2rem;
   padding-top: 0.7em;
   font-weight: bold;
-  color: #C186C9;
-  color: white;
   text-align: left;
-  background-color: #913F61;
-  padding-bottom: 1rem;
-  margin-bottom: 3rem; }
-  h1 span {
+  padding-bottom: 1rem; }
+  .title em {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.5rem; }
+  .title span {
     font-size: 0.95rem;
     color: white;
     font-weight: normal; }
@@ -92,14 +117,22 @@ h1 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
 .tagline2 {
-  font-size: 2rem; }
+  font-size: 1.85rem; }
+
+@media (max-width: 768px) {
+  .tagline {
+    font-size: 2.5rem; }
+
+  .tagline2 {
+    font-size: 1.3rem; }
+ }
 
 .demoBtn {
   display: block;
   margin: 0 10%;
   margin-top: 2rem;
   background-color: #842424;
-  border: 2px solid #333;
+  border: 2px solid #111;
   border-radius: 15px;
   font-size: 3.75rem;
   padding: 2rem;
@@ -125,7 +158,7 @@ footer {
   width: 100%; }
 
 form {
-  background-color: #2C2E30;
+  background-color: #000;
   margin-top: 3rem;
   margin-left: 1rem;
   border-radius: 5px;
