--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
-﻿
-@font-face {
+﻿$bgColor:#913F61;
+/*@font-face {
     font-family: 'overpassregular';
     src: url('fonts/Overpass_Regular-webfont.eot');
     src: url('fonts/Overpass_Regular-webfont.eot?#iefix') format('embedded-opentype'),
@@ -9,16 +9,18 @@
     font-weight: normal;
     font-style: normal;
 
-}
+}*/
+
+
+
 body {
    
-    background-color:#F4F4F4;
-     background-color:#353C42;
     
-    color:#353c42;
-    color:#eee;
+     background-color:#1C1C1C;
+    
+        color:#eee;
     font-size:1.5rem;
-    font-family:'overpassregular','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Open Sans','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .fun{
@@ -33,8 +35,8 @@ a,a:hover{
 
 .glance-box{
      
-          background-color: #40484f;
-    border: 1px solid #757575;
+          background-color: #262626;
+    border: 1px solid #333;
     
 
     border-radius: 10px;
@@ -51,7 +53,7 @@ a,a:hover{
 
     li{
         margin-top:.7rem;
-        font-size:1.5rem;
+        font-size:1.3rem;
        line-height:1.8;
        padding-left:2.1rem;
        padding-right:1rem;
@@ -83,23 +85,57 @@ address{
 }
 header{
    margin-bottom:4rem;
+   
 }
 
-h1{
-    font-size:8rem;
-    font-size:2rem;
+.navbar-bubeat {
+            background-color: $bgColor;
+    .navbar-header {
+        font-weight:400;
+        text-align:center;
+        .navbar-toggle {
+            float:none;
+            background-color: $bgColor;
+            margin:0;
+        }
+    }
+    .mobile-title{
+        font-size:1.75rem;
     margin-top:0;
-        padding-left:2rem;
+    padding-left:2rem;
+    font-weight:bold;
+    
+   text-align:left;
+
+        span{
+        font-size:.95rem;
+        color:white;
+        font-weight:normal;
+    }
+    }
+}
+.nav > li > a:focus, .nav > li > a:hover {
+    text-decoration:underline;
+    background-color: $bgColor;
+}
+
+.title{
+   font-size:2rem;
+    margin-top:0;
+    padding-left:2rem;
     padding-top:.7em;
     font-weight:bold;
-    color:#C186C9;   
-    color:white;   
+    
    text-align:left;
-    background-color:#913F61;
+
     
     padding-bottom:1rem;
-    margin-bottom:3rem;
 
+    em{
+        font-style:normal;
+        font-weight:normal;
+        font-size:1.5rem;
+    }
     span{
         font-size:.95rem;
         color:white;
@@ -122,7 +158,19 @@ h1{
 }
 
 .tagline2{
-font-size:2rem;
+font-size:1.85rem;
+}
+
+@media(max-width:768px)
+{
+    .tagline {
+        font-size:2.5rem;
+    }
+
+    .tagline2
+    {
+        font-size:1.3rem;
+    }
 }
 
 .demoBtn{
@@ -130,7 +178,7 @@ font-size:2rem;
     margin:0 10%;
     margin-top:2rem;
     background-color: #842424;
-    border: 2px solid #333;
+    border: 2px solid #111;
     border-radius:15px;
     font-size: 3.75rem;
     padding: 2rem;
@@ -170,7 +218,7 @@ footer{
 } 
 
 form{
-    background-color:#2C2E30;
+    background-color:#000;
     margin-top:3rem;
     margin-left:1rem;
     border-radius:5px;
