--- a/style.css
+++ b/style.css
@@ -1,15 +1,4 @@
-﻿/*@font-face {
-    font-family: 'overpassregular';
-    src: url('fonts/Overpass_Regular-webfont.eot');
-    src: url('fonts/Overpass_Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/Overpass_Regular-webfont.woff') format('woff'),
-         url('fonts/Overpass_Regular-webfont.ttf') format('truetype'),
-         url('fonts/Overpass_Regular-webfont.svg#overpassregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}*/
-body {
+﻿body {
   background-color: #1C1C1C;
   color: #eee;
   font-size: 1.5rem;
