--- a/style.scss
+++ b/style.scss
@@ -6,10 +6,10 @@ $textColor:#555;
 @import "flaticon.css";
 @import "font-mfizz.css";
 
-
-
-.ggg{
-    vertical-align:auto;
+@mixin mobile(){
+    @media(max-width:640px){
+        @content
+    }
 }
 
 body {
@@ -21,11 +21,20 @@ body {
 }
 
 
+.blog{
+    text-align:right;
+    margin-right:2rem;
+    .btn-primary,a:hover{
+        background-color:#fff;
+        color:$btnColor;
+        border:1px solid $btnBorderColor;
+    }
+}
 
 .logo{
        margin-bottom:3rem;
        padding:10px 0;
-       margin-top:60px;
+       margin-top:30px;
        text-align:center;
    }
 
@@ -198,11 +207,24 @@ footer{
         line-height:1.5;
     }
 
+    @include mobile {
+        p{
+            padding:0 15px;
+        }
+    }
+
     .what-is{
         p{
             width:80%;
         }
         
+        @include mobile{
+           p{ 
+               width:100%;
+
+           }
+        }
+
         h2{
             color:$textColor;
         }
